--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Lexend+Deca:wght@100;200;300;400;500;600;700&display=swap');
 
 body {
   margin: 0;
-  font-family: 'Lexend Deca'
+  font-family: 'Comfortaa'
 }
