--- a/frontend/src/styles/Hero.css
+++ b/frontend/src/styles/Hero.css
@@ -1,27 +1,22 @@
 .hero {
-    position: absolute;
-    z-index: -1;
-    top: 0;
     width: 100vw;
-    height: 100vh;
-    background-color: #323232;
+    height: 90vh;
+    background-color: #201240;
     overflow: hidden;
     color: white;
 }
 
 img {
     position: absolute;
-    right: -200px;
-    top: 40%;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+}
+
+.text {
+    margin-left: 40px;
 }
 
 h1 {
-    font-size: 180px;
-    line-height: 190px;
-    width: 100px;
-    top: 200px;
-}
-
-p {
-    top: -100px;
+    font-size: 150px;
 }
